--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,424 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+/* Navbar section */
+.header {
+  background-color: whitesmoke;
+  font-size: large;
+  font-weight: 100;
+  font-family: sans-serif;
+  color: black; 
+  padding: 10px 0px 2px 0px;
+}
+.container {
+  width: 80%; 
+  margin: 0 auto; 
+}
+
+.header__navbar ul {
+  margin-top: 5px;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly; 
+}
+
+.header__navbar ul :hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+}
+
+.header__navbar li {
+  margin: 0 10px; 
+}
+
+.header__navbar a {
+  text-decoration: none; 
+  color: black;
+}
+
+/* Section............................................................................... */
+.section__head{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  padding: 20px 0px 20px 0px;
+  color: rgb(146, 97, 7)
 }
 
 
+/* CSS for Product Card....................................................................  */
+ .ingredient {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+  width: calc(33.333% - 20px);
+  height: 460px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  float: left
+}
+
+.ingredient__image {
+  text-align: center;
+}
+
+.ingredient__image img {
+  width: 50%;
+  height: 50%;
+  max-height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.ingredient__title h3 {
+  margin: 10px 0;
+  font-size: 18px;
+  color: #333;
+}
+
+.ingredient__content p {
+  font-size: 14px;
+  color: #666;
+}
+
+.ingredient__content p span {
+  font-weight: bold;
+  color: #ff6600;
+}
+
+.ingredient__btn {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+
+/* CSS for Details Page.................................................................. */
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.details-box {
+  display: flex;
+  height: 100vh;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.image-section {
+  flex: 1;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.details-section {
+  flex: 2;
+}
+
+.details-box__image {
+  width: 100%;
+  height: 80%;
+  box-sizing: border-box;
+  border-radius: 8px;
+}
+
+.details-section__product-title {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.details-section p {
+  font-size: 16px;
+  color: #666;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+
+/* CSS for Form Section(SignUp)................................................... */
+.Form__section {
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.Form__section h2 {
+  font-size: 24px;
+  color: #333;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.Form__section-input input[type='email'],
+.Form__section-input input[type='text'],
+.Form__section-input input[type='password'] {
+  width: calc(100% - 20px);
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
+.Form__section-input input[type='submit'] {
+  width: 100%;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.Form__section-input input[type='submit']:hover {
+  background-color: #0056b3;
+}
+
+
+/* CSS for Login Section......................................................... */
+
+.Login__section {
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.Login__section h1 {
+  font-size: 28px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.Login__section-input div {
+  margin-bottom: 15px;
+}
+
+.Login__section-input input[type='text'],
+.Login__section-input input[type='password'] {
+  width: calc(100% - 20px);
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.Login__section-input button[type='submit'] {
+  width: 100%;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.Login__section-input button[type='submit']:hover {
+  background-color: #0056b3;
+}
+
+
+/* CSS for CartItem section..........................................................*/
+.account-setting__content {
+  margin-top: 20px;
+}
+
+.account-setting__content__title {
+  margin-bottom: 10px;
+}
+
+.product-table-container {
+  overflow-x: auto;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead {
+  background-color: #f2f2f2;
+}
+
+th, td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.product-img {
+  max-width: 80px;
+  max-height: 80px;
+  border-radius: 8px;
+}
+
+.qty_input {
+  display: flex;
+  align-items: center;
+}
+
+.qty-count {
+  background-color: #ddd;
+  border: none;
+  padding: 6px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin: 0 4px;
+}
+
+.qty-count--minus, .qty-count--plus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  padding-bottom: 0px;
+}
+
+.input-qty {
+  width: 60px; 
+  text-align: center;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.cross-icon {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+tbody tr {
+  transition: background-color 0.3s ease;
+}
+
+tbody tr:hover {
+  background-color: #f0f0f0;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #add8e6;
+}
+
+tbody tr:nth-child(even) {
+ background-color: #f0f8ff;
+}
+
+/* Style for product rows.............................................................. */
+.product-row {
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+}
+
+.product-row img {
+  max-width: 100px;
+  height: auto;
+}
+
+.product-row td {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+}
+
+.product-row h2 {
+  margin: 0;
+  font-size: 1.2rem;
+}
+
+.product-icon {
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+ 
+.product-row:hover {
+  background-color: #f5f5f5;
+}
+
+
+
+
+
+
+
+
+
+.input-form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.input-form p {
+  margin: 10px 0;
+}
+
+.input-form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
+.input-form input[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+}
+
+.input-form input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+/* You can add more styles as needed */
