--- a/src/App.css
+++ b/src/App.css
@@ -383,14 +383,6 @@ tbody tr:nth-child(even) {
   background-color: #f5f5f5;
 }
 
-
-
-
-
-
-
-
-
 .input-form {
   max-width: 400px;
   margin: 0 auto;
@@ -421,4 +413,70 @@ tbody tr:nth-child(even) {
   background-color: #0056b3;
 }
 
-/* You can add more styles as needed */
+/* User Section..................................................................... */
+.account-setting__content {
+  margin: 20px;
+  padding: 20px;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.account-setting__content__title h4 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.product-table-container {
+  overflow-x: auto;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+thead {
+  background-color: #333;
+  color: #fff;
+}
+
+th, td {
+  padding: 12px;
+  text-align: left;
+}
+
+tbody {
+  background-color: #fff;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+button {
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+.remove-user-icon {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.remove-user-icon:hover {
+  transform: scale(1.2);
+}
